--- a/docs/assets/css/iconfont.css
+++ b/docs/assets/css/iconfont.css
@@ -1,8 +1,31 @@
-@font-face {font-family: "Engravers' Old English BT";
-    src: url("https://unpkg.com/dmego-home-page/assets/fonts/d571b52b60b5617399ce8eab62bf3eb3.eot"); /* IE9*/
-    src: url("https://unpkg.com/dmego-home-page/assets/fonts/d571b52b60b5617399ce8eab62bf3eb3.eot?#iefix") format("embedded-opentype"), /* IE6-IE8 */
-    url("https://unpkg.com/dmego-home-page/assets/fonts/d571b52b60b5617399ce8eab62bf3eb3.woff2") format("woff2"), /* chrome firefox */
-    url("https://unpkg.com/dmego-home-page/assets/fonts/d571b52b60b5617399ce8eab62bf3eb3.woff") format("woff"), /* chrome firefox */
-    url("https://unpkg.com/dmego-home-page/assets/fonts/d571b52b60b5617399ce8eab62bf3eb3.ttf") format("truetype"), /* chrome firefox opera Safari, Android, iOS 4.2+*/
-    url("https://unpkg.com/dmego-home-page/assets/fonts/d571b52b60b5617399ce8eab62bf3eb3.svg#Engravers' Old English BT") format("svg"); /* iOS 4.1- */
+@font-face {
+  font-family: "iconfont"; /* Project id 3645983 */
+  src: url('iconfont.woff2?t=1663064316523') format('woff2'),
+       url('iconfont.woff?t=1663064316523') format('woff'),
+       url('iconfont.ttf?t=1663064316523') format('truetype');
 }
+
+.iconfont {
+  font-family: "iconfont" !important;
+  font-size: 16px;
+  font-style: normal;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-yuque:before {
+  content: "\e880";
+}
+
+.icon-github:before {
+  content: "\e885";
+}
+
+.icon-bilibili:before {
+  content: "\e75d";
+}
+
+.icon-email:before {
+  content: "\e77e";
+}
+
